# lightbox

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_win.bat  format_code.bat  format_code.sh
.github/workflows/: cmake.yml  cmake_win.yml
app/: CMakeLists.txt  lightbox.cpp
app/inc/: lightbox.hpp  nano_inc.hpp  texture.hpp
app/src/: lbcamtest.cpp  lightbox.cpp  lightbox_app.cpp  main.cpp
camera/: CMakeLists.txt  README.md  build_linux.sh  build_win.bat
camera/inc/: auto_close.hpp  autorel_win.hpp  buffer_memmap.hpp  camera.hpp  camera2cv.hpp  camera_frame.hpp  camera_info.hpp  camera_manager.hpp  camera_opencv.hpp  camera_platform.hpp  camera_v4l2.hpp  camera_win.hpp  camera_win_impl.hpp  camera_winrt.hpp  convert.hpp  device_v4l2.hpp  errors.hpp  find_files.hpp  log.hpp  param.hpp  platform.hpp  store_error.hpp  winrt_utils.hpp  zebral_camera.hpp
camera/src/: auto_close.cpp  buffer_memmap.cpp  camera.cpp  camera_info.cpp  camera_manager.cpp  camera_opencv.cpp  camera_v4l2.cpp  camera_win.cpp  camera_win_impl.cpp  camera_winrt.cpp  convert.cpp  device_v4l2.cpp  errors.cpp  find_files.cpp  log.cpp  param.cpp  platform.cpp  store_error.cpp  winrt_utils.cpp
camera/test/: CMakeLists.txt  camera_tests.cpp
camera/utils/: CMakeLists.txt  zebral_camera_util.cpp
firmware/: README.md  code.py  lightbar.py
inc/: lightbox.hpp
inc/camera/: camera.hpp  camera_info.hpp  camera_manager.hpp  camera_win.hpp  errors.hpp  platform.hpp
python/: CMakeLists.txt  zebralpy.cpp
python/test/: zebral_python_test.py
res/: zebral_logo.ai
script/: build_win.bat  clean_win.bat
scripts/hooks/: README.md  pre-commit
serial/: CMakeLists.txt
serial/inc/: serial_line_channel.hpp
serial/src/: serial_line_channel.cpp  serial_line_linux.cpp  serial_line_winrt.cpp
serial/test/: serial_test.cpp
src/: main.cpp
src/camera/: camera.cpp  camera_info.cpp  camera_manager.cpp  camera_win.cpp
test/: CMakeLists.txt  basic_tests.cpp
zebral/: CMakeLists.txt  README.md  build_linux.sh  build_win.bat
zebral/app/: CMakeLists.txt  zebral_camera_util.cpp
zebral/camera/: CMakeLists.txt  todo.md
zebral/camera/inc/: camera.hpp  camera2cv.hpp  camera_frame.hpp  camera_info.hpp  camera_manager.hpp  camera_platform.hpp  convert.hpp  device_v4l2.hpp  param.hpp  zebral_camera.hpp
zebral/camera/src/: buffer_memmap.cpp  camera.cpp  camera_info.cpp  camera_manager.cpp  camera_v4l2.cpp  camera_winrt.cpp  convert.cpp  device_v4l2.cpp  param.cpp
zebral/camera/test/: CMakeLists.txt  camera_tests.cpp
zebral/camera/utils/: CMakeLists.txt  zebral_camera_util.cpp
zebral/common/: CMakeLists.txt  LICENSE  README.md
zebral/common/inc/: log.hpp  platform.hpp  store_error.hpp  system_utils.hpp
zebral/common/src/: errors.cpp  find_files.cpp  platform.cpp  store_error.cpp  system_utils.cpp
zebral/common/test/: CMakeLists.txt  common_tests.cpp
zebral/inc/: zebral.hpp
zebral/python/: all_includes.hpp  gen_bindings.sh
zebral/python/test/: CMakeLists.txt  zebral_python_test.py
zebral/serial/: CMakeLists.txt
zebral/serial/inc/: serial_channel.hpp  serial_info.hpp
zebral/serial/src/: serial_channel.cpp  serial_info.cpp  serial_linux.cpp  serial_winrt.cpp
zebral/serial/test/: CMakeLists.txt  serial_test.cpp
zebral/src/: zebral.cpp
zebral/test/: CMakeLists.txt  zebral_test.cpp
